Fix spacing below programming cards

--- a/src/assets/css/_base.scss
+++ b/src/assets/css/_base.scss
@@ -402,7 +402,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .overview-section .item {
-	margin-bottom: 0.5rem;
+	margin-bottom: 1rem;
 }
 
 /* Footer */
